<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--我的Fragment布局-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="?attr/colorPrimary">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_head"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/default_head"
            android:layout_gravity="center"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"
            >


        </de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/txt_username"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="70dp"
            android:text="@string/to_login"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:padding="@dimen/largePadding"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_list_o"
                android:gravity="center_vertical"
                android:drawablePadding="20dp"
                android:text="@string/my_orders"
                android:id="@+id/txt_my_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <View style="@style/line_horizontal" />

            <TextView
                android:id="@+id/txt_my_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_favorite"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_favorite"
                android:textColor="@color/black" />

            <View style="@style/line_horizontal" />


            <TextView
                android:id="@+id/txt_my_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_location"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_addresses"
                android:textColor="@color/black" />

            <View style="@style/line_horizontal" />

            <TextView
                android:id="@+id/txt_my_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_list_item"
                android:drawableLeft="@drawable/icon_msg"
                android:drawablePadding="20dp"
                android:gravity="center_vertical"
                android:padding="@dimen/largePadding"
                android:text="@string/my_msg"
                android:textColor="@color/black" />

            <View style="@style/line_horizontal" />
            <Button
                android:layout_margin="20dp"
                android:id="@+id/btn_logout"
                style="@style/bigRedButton"
                android:text="@string/logout"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                 />

        </LinearLayout>

    </ScrollView>



</LinearLayout>